Corrigindo conflitos merge